# MA-Programming

./: .gitignore  Main.py  ReLU-Linear_FGD.py  check_cuda_dtype.py  check_models_layer_settings.py  check_models_parameters.py  config.yaml  config0.yaml  config1.yaml  config2.yaml  config3.yaml  config4.yaml  config5_0.yaml  config5_1.yaml  config5_2.yaml  config_Speicher_test.yaml  config_base.yaml  jax_jvp_Example.py  linearRegressionForwardGradient.py  linearRegressionJax.py  linearRegressionTorch.py  linearRegressionWithOutJax.py  linearRegression_BP_Torch.py  main.py  model_information_output.py  pyproject.toml
BP/: linearRegressionJax.py  linearRegressionTorch.py  linearRegression_BP_JAX.py  linearRegression_BP_Torch.py
FGD/: linearRegressionForwardGradient.py  linearRegression_FGD.py  relu_Linear_FGD.py
NN-Training/: JAX_NNandDataLoading.py
NNTraining/: JAX_NN.py  JAX_NNandDataLoading.py  main_jax_NN.py
NNTrainingJAX/: main_jax_NN.py
NNTrainingTorch/: main_pytorch_NN.py
Old/: Main.py  Old_config.yaml  SeLuWithJax.py  linear_regression_jax.ipynb
_new/: config.yaml  main.py
helpers/: config_class.py  datasets.py  early_stopping_class.py  loss_function.py  memory_recorder.py  model.py  optimizer.py  saver_class.py  singlerun_manager_class.py  tester_class.py  trainer_class.py  training_metrics_class.py  validation_class.py
jax_nn_training/: main_jax_NN.py
manual_calculations/: manual_calculation_FGD.py
methods/: backprop_trainer.py  fg_trainer.py  fg_trainer_ResNetTest.py  fg_trainer_dual.py
torch_nn_training/: config.yaml  config2.yaml  (+2 more)
(+106 files in other folders)
