[project]
name = "ma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "path>=17.1.1",
    "pathlib>=1.0.1",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
]
